# templates

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
