[tool.poetry]
name = "freetrade"
version = "0.1.0"
description = ""
authors = ["Hong"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-bigquery = "^2.6.1"
google-cloud = "^0.34.0"
google-cloud-storage = "^1.34.0"
google-cloud-pubsub = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
